# cloud-app-examples

./: .gitignore  README.md
dashboard/: package-lock.json  package.json
dashboard/frontend/: package-lock.json  vue.config.js
dashboard/server/: main.py
dashboard/src/: App.vue
data-analysis/dbt/: requirements.txt
data-analysis/dbt/tourial/: pyproject.toml  readme.md
data-analysis/dbt/tourial/demo_pg/: dbt_project.yml  profiles.yml
data-analysis/dbt/tourial/demo_pg/tests/: my_test.sql
docker/airflow/: docker-compose-db-local.yaml  docker-compose-external-db.yaml  readme.md
docker/azure-container-app/: main.py
docker/dbt/: Dockerfile  profiles.yml  readme.md
docker/fastapi-demo/: Dockerfile  db_sqlite.py  main.py  model.py  readme.md  readme_en.md  requirements.txt  utils.py
docker/git-webhook/: Dockerfile  server.py  webhook.sh
docker/github-webhook/: Dockerfile  readme.md  server.py  webhook.sh
docker/gitlab/: gitlab.yml
docker/install/: aliyun-speed.md  docker.md
docker/metabase/: readme.md
docker/mongo/: docker-compose.yml  readme.md
docker/mqtt/: docker.md
docker/mysql/: .env  docker-compose.yml
docker/nginx/: Dockerfile  docker-entrypoint.sh
docker/odoo/: readme.md
docker/postgres/: .env  docker-compose.yml  readme.md
docker/postgrest/: Dockerfile  postgrest.conf  readme.md
docker/python/: flask-demo.py  (+1 more)
k8s-k3s/: _install-k3s.sh  common-cmd.md  install.md  k3s-install.md  readme.md
mongo/: readme.md
mysql/: readme.md
postgres/: readme.md
redis/: Dockerfile  readme.md  redis.conf
speed-cn/: golang.md  ubuntu.md
(+71 files in other folders)
